--- a/Project1/Project1.csproj
+++ b/Project1/Project1.csproj
@@ -5,6 +5,11 @@
     <UserSecretsId>5af57f03-4144-438b-922d-47b255174499</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\kklaw\source\repos\TwitterWebTracker\Project1\Project1.xml</DocumentationFile>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
